tests/snapshots/tui/training_finished_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                                                                      │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0.53/h                                         followed   │"
"│ 20260920-101500-9f00  succeeded  homelab                                                                             │"
"│ 20260919-090000-c3d4  running    homelab                                                                             │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"  20260920-101500-9f00  step 400/4000 █▋               10%                                                              "
"  epoch 0.30                                                                                                            "
"                                                                                                                        "
"  loss                                                                                                 ─ train  • eval  "
"  1.88  │                                                                                                               "
"        │▀▀▄▄                                                                                                           "
"        │    ▀▀▄▄                                                                                                       "
"        │        ▀▀▄▄▄                                                                                                  "
"        │             ▀▀▄▄                                                                                              "
"        │                 ▀▀▄▄                                                                                          "
"        │                     ▀▀▀▄▄▄                                                                                    "
"        │                           ▀▀▀▄                                                                                "
"        │                               ▀▀▄▄                                                                            "
"        │                                   ▀▀▀▄▄▄                                                                      "
"        │                                         ▀▀▀▄▄                                                                 "
"        │                                              ▀▀▀▄▄  •                                                         "
"        │                                                   ▀▀▄▄                                                        "
"        │                                                       ▀▀▄▄▄                                                   "
"        │                                                            ▀▀▀▄▄▄                                             "
"        │                                                                  ▀▀▄▄▄                                        "
"        │                                                                       ▀▀▀▄▄▄                                  "
"        │                                                                             ▀▀▀▄▄                             "
"        │                                                                                  ▀▀▀▄▄▄                       "
"        │                                                                                        ▀▀▀▀▀▄▄▄               "
"        │                                                                                                ▀▀▀▄▄▄      •  "
"        │                                                                                                      ▀▀▄▄     "
"  1.30  │                                                                                                               "
"        └─────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"  step 10                                                                                                          400  "
"  lr             ▁▁▁▁▁▂▂▂▂▂▃▃▃▃▃▄▄▄▄▄▅▅▅▅▅▆▆▆▆▆▇▇▇▇█                                                         1.47e-4    "
"  grad_norm ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█                                                          0.700      "
"  train: run 20260920-101500-9f00 succeeded; 400 steps in 13m; loss 0.91; output in runs/20260920-101500-9f00/output    "
" j/k select · a attach · c cancel · t start                                   … 1 training task · $0.36  v#.#.#  ? help "
