tests/snapshots/tui/training_not_followed_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                                                                      │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0.53/h                                         followed   │"
"│ 20260920-101500-9f00  succeeded  homelab                                                                             │"
"│ 20260919-090000-c3d4  running    homelab                                                                             │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"  20260919-090000-c3d4                                                                                                  "
"                                                                                                                        "
"  not followed: press a to attach                                                                                       "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" j/k select · a attach · c cancel · t start                                   … 1 training task · $0.36  v#.#.#  ? help "
